--- a/style.css
+++ b/style.css
@@ -58,24 +58,40 @@ body {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-.agine button {
+.clear button {
     width: 30vmin;
     height: 10vmin;
-    background-image: -webkit-linear-gradient(0deg, #fcc245 9%, #fa7ef2 75%);
+    background: linear-gradient(to right, #e96443, #904e95);
     color: white;
     font-size: 5vmin;
     border: none;
     border-radius: 10px;
+    transition: opacity 0.1s linear;
+    opacity: 0.8;
 }
-.agine button:hover {
-    background-color: rgb(159, 83, 230);
+.clear button:hover {
+    opacity: 1;
 }
-#refresh {
+.again {
+    background: linear-gradient(to right, #e96443, #904e95);
     padding: 20px;
     border-radius: 100px;
+    color: white;
+    font-size: 4vmin;
+    border: none;
+    margin-top: 30px;
+    opacity: 0.8;
+    transition: opacity 0.1s linear;
+
+}
+.again:hover{
+    opacity: 1;
 }
 .befor p {
     margin: 10px 0px;
+}
+#demo{
+    color: white;
 }
 @media screen and (max-width: 980px) {
     .cdooz {
